--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
 </head>
 <body>
     <header>
-        <h1>Kojenerasyon Takip Sistemi</h1>
+        <div class="header-content">
+            <h1>Kojenerasyon Takip Sistemi</h1>
+            <div class="header-actions">
+                <span id="user-name" class="user-info"></span>
+                <button onclick="logout()" class="logout-btn">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M9 21H5a2 2 0 01-2-2V5a2 2 0 012-2h4"></path>
+                        <polyline points="16,17 21,12 16,7"></polyline>
+                        <line x1="21" y1="12" x2="9" y2="12"></line>
+                    </svg>
+                    Çıkış
+                </button>
+            </div>
+        </div>
         <nav>
             <button onclick="showPage('dashboard')">Kontrol Paneli</button>
             <button onclick="showPage('data-entry')">Veri Girişi</button>
