--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <div class="motor-card">
                                 <div class="motor-header">
                                     <div class="motor-title">GM-1</div>
-                                    <div class="motor-status active">AKTİF</div>
+                                    <div class="motor-status clickable" id="gm1-status" data-motor="gm1" onclick="toggleMotorStatus('gm1')">AKTİF</div>
                                 </div>
                                 <div class="motor-details">
                                     <div class="motor-info">
@@ -152,7 +152,7 @@
                             <div class="motor-card">
                                 <div class="motor-header">
                                     <div class="motor-title">GM-2</div>
-                                    <div class="motor-status active">AKTİF</div>
+                                    <div class="motor-status clickable" id="gm2-status" data-motor="gm2" onclick="toggleMotorStatus('gm2')">AKTİF</div>
                                 </div>
                                 <div class="motor-details">
                                     <div class="motor-info">
@@ -195,7 +195,7 @@
                             <div class="motor-card">
                                 <div class="motor-header">
                                     <div class="motor-title">GM-3</div>
-                                    <div class="motor-status inactive">PASİF</div>
+                                    <div class="motor-status clickable" id="gm3-status" data-motor="gm3" onclick="toggleMotorStatus('gm3')">PASİF</div>
                                 </div>
                                 <div class="motor-details">
                                     <div class="motor-info">
@@ -328,9 +328,9 @@
     <!-- Alert Container -->
     <div class="alert-overlay" id="alert-container"></div>
 
-    <script src="js/google-sheets.js"></script>
-    <script src="js/auth.js"></script>
-    <script src="js/data-manager.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/google-sheets.js?v=20260129-1"></script>
+    <script src="js/auth.js?v=20260129-1"></script>
+    <script src="js/data-manager.js?v=20260129-1"></script>
+    <script src="js/app.js?v=20260129-1"></script>
 </body>
 </html>
