Buhar Üretim Sistemi Eklendi - 983 Değeri ve Dünkü Tarih Desteği

--- a/index.html
+++ b/index.html
@@ -236,6 +236,27 @@
                             </div>
                         </div>
                     </div>
+                    
+                    <!-- Buhar Üretim Sonuçları -->
+                    <div class="section-card">
+                        <h2><i>💨</i> Buhar Üretim Sonuçları</h2>
+                        <div class="steam-production-container">
+                            <div class="steam-info-grid">
+                                <div class="steam-info-item">
+                                    <span class="info-label">Ayın Toplam Buhar Üretimi (ton):</span>
+                                    <span class="info-value" id="monthly-steam-production">0.00</span>
+                                </div>
+                                <div class="steam-info-item">
+                                    <span class="info-label">En Son Günde Üretilen Buhar (ton):</span>
+                                    <span class="info-value" id="latest-steam-production">0.00</span>
+                                </div>
+                                <div class="steam-info-item">
+                                    <span class="info-label">Veri Güncelleme:</span>
+                                    <span class="info-value" id="steam-update">-</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </section>
 
                 <!-- Data Entry Section -->
