--- a/index.html
+++ b/index.html
@@ -242,17 +242,17 @@
                         <h2><i>💨</i> Buhar Üretim Sonuçları</h2>
                         <div class="steam-production-container">
                             <div class="steam-info-grid" style="display: grid !important; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)) !important; gap: 16px !important; padding: 20px !important; background: rgba(255, 255, 255, 0.05) !important; border: 1px solid rgba(255, 255, 255, 0.1) !important; border-radius: 16px !important;">
-                                <div class="steam-info-item" style="display: flex !important; justify-content: space-between !important; align-items: center !important; padding: 12px 16px !important; background: rgba(255, 255, 255, 0.03) !important; border-radius: 8px !important; border: 1px solid rgba(255, 255, 255, 0.05) !important;">
-                                    <span class="info-label" style="font-size: 13px !important; color: #b8c5e0 !important; font-weight: 500 !important;">Ayın Toplam Buhar Üretimi (ton):</span>
-                                    <span class="info-value" id="monthly-steam-production" style="font-size: 15px !important; color: #ffffff !important; font-weight: 600 !important;">0.00</span>
+                                <div class="steam-info-item" style="display: flex !important; justify-content: space-between !important; align-items: center !important; padding: 12px 16px !important; background: rgba(255, 255, 255, 0.03) !important; border-radius: 8px !important; border: 1px solid rgba(255, 255, 255, 0.05) !important; margin-bottom: 8px !important;">
+                                    <span class="info-label" style="font-size: 13px !important; color: #b8c5e0 !important; font-weight: 500 !important; flex: 1 !important;">Ayın Toplam Buhar Üretimi (ton):</span>
+                                    <span class="info-value" id="monthly-steam-production" style="font-size: 15px !important; color: #ffffff !important; font-weight: 600 !important; margin-left: 10px !important;">0.00</span>
                                 </div>
-                                <div class="steam-info-item" style="display: flex !important; justify-content: space-between !important; align-items: center !important; padding: 12px 16px !important; background: rgba(255, 255, 255, 0.03) !important; border-radius: 8px !important; border: 1px solid rgba(255, 255, 255, 0.05) !important;">
-                                    <span class="info-label" style="font-size: 13px !important; color: #b8c5e0 !important; font-weight: 500 !important;">En Son Günde Üretilen Buhar (ton):</span>
-                                    <span class="info-value" id="latest-steam-production" style="font-size: 15px !important; color: #ffffff !important; font-weight: 600 !important;">0.00</span>
+                                <div class="steam-info-item" style="display: flex !important; justify-content: space-between !important; align-items: center !important; padding: 12px 16px !important; background: rgba(255, 255, 255, 0.03) !important; border-radius: 8px !important; border: 1px solid rgba(255, 255, 255, 0.05) !important; margin-bottom: 8px !important;">
+                                    <span class="info-label" style="font-size: 13px !important; color: #b8c5e0 !important; font-weight: 500 !important; flex: 1 !important;">En Son Günde Üretilen Buhar (ton):</span>
+                                    <span class="info-value" id="latest-steam-production" style="font-size: 15px !important; color: #ffffff !important; font-weight: 600 !important; margin-left: 10px !important;">0.00</span>
                                 </div>
-                                <div class="steam-info-item" style="display: flex !important; justify-content: space-between !important; align-items: center !important; padding: 12px 16px !important; background: rgba(255, 255, 255, 0.03) !important; border-radius: 8px !important; border: 1px solid rgba(255, 255, 255, 0.05) !important;">
-                                    <span class="info-label" style="font-size: 13px !important; color: #b8c5e0 !important; font-weight: 500 !important;">Veri Güncelleme:</span>
-                                    <span class="info-value" id="steam-update" style="font-size: 15px !important; color: #ffffff !important; font-weight: 600 !important;">-</span>
+                                <div class="steam-info-item" style="display: flex !important; justify-content: space-between !important; align-items: center !important; padding: 12px 16px !important; background: rgba(255, 255, 255, 0.03) !important; border-radius: 8px !important; border: 1px solid rgba(255, 255, 255, 0.05) !important; margin-bottom: 8px !important;">
+                                    <span class="info-label" style="font-size: 13px !important; color: #b8c5e0 !important; font-weight: 500 !important; flex: 1 !important;">Veri Güncelleme:</span>
+                                    <span class="info-value" id="steam-update" style="font-size: 15px !important; color: #ffffff !important; font-weight: 600 !important; margin-left: 10px !important;">-</span>
                                 </div>
                             </div>
                         </div>
