--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                             <input type="date" id="hourlyDate" class="form-input">
                         </div>
                         <div class="form-group">
-                            <button id="createMonthlySheetsBtn" class="btn btn-primary">
+                            <button id="createMonthlySheetsBtn" class="btn btn-primary" style="display: none;">
                                 <i class="fas fa-calendar-plus"></i>
                                 Aylık Sayfaları Oluştur
                             </button>
