İlk commit - Kojenerasyon sistemi

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kojenerasyon Takip Sistemi</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <!-- PWA Manifest -->
@@ -278,6 +280,8 @@
                         <div class="motor-info">
                             <h3 class="motor-name">GM-1</h3>
                             <p class="motor-details">Jenbacher J-620</p>
+                        </div>
+                        <div class="motor-controls">
                             <div class="motor-power">
                                 <span class="power-value">3450</span>
                                 <span class="power-unit">MWh</span>
@@ -316,6 +320,8 @@
                         <div class="motor-info">
                             <h3 class="motor-name">GM-2</h3>
                             <p class="motor-details">Jenbacher J-620</p>
+                        </div>
+                        <div class="motor-controls">
                             <div class="motor-power">
                                 <span class="power-value">3450</span>
                                 <span class="power-unit">MWh</span>
@@ -354,6 +360,8 @@
                         <div class="motor-info">
                             <h3 class="motor-name">GM-3</h3>
                             <p class="motor-details">Jenbacher J-620</p>
+                        </div>
+                        <div class="motor-controls">
                             <div class="motor-power">
                                 <span class="power-value">3450</span>
                                 <span class="power-unit">MWh</span>
